yet another bug squashed

--- a/app/assets/stylesheets/portal/protocol_edit.css
+++ b/app/assets/stylesheets/portal/protocol_edit.css
@@ -94,6 +94,20 @@
   width: 100px !important;
 }
 
+.user-edit-protocol-view .box .info label {   
+  width: 150px !important;    
+  display: block;   
+  float: left;    
+  margin: 4px 10px 0 0;   
+  padding: 2px;   
+  font-size: 1.2em;   
+}   
+        
+.user-edit-protocol-view .box .info label.long { 
+  width: 650px !important;    
+}
+
+
 .user-edit-protocol-view .box .info .field {
   display: block;
   float: left;
@@ -290,14 +304,6 @@ legend {
   width: 100%;
 }
 
-.user-edit-protocol-view .box .info label {
-  width: 85%;
-  display: block;
-  float: left;
-  margin: 4px 10px 0 0;
-  padding: 2px;
-  font-size: 1.2em;
-}
 
 .edit-project-view .box .info label {
   width: 125px;
